# in-the-haunted-prison

./: .clang-format  .gitignore  CMakeLists.txt  README.md  z88dk-clion.yaml
data/: texts.csv  title-screen.c
data/tiled/: jeu-lynx.tiled-session  jeu-lynx.tsx  jeu-lynx.world  level_05.tmx  level_06.tmx  level_13.tmx  level_14.tmx  level_15.tmx  level_16.tmx  level_23.tmx  level_24.tmx  level_25.tmx  level_26.tmx  level_27.tmx  level_33.tmx  level_34.tmx  level_35.tmx  level_36.tmx  level_43.tmx  level_44.tmx  level_45.tmx  level_53.tmx  level_54.tmx  level_55.tmx  level_56.tmx  level_57.tmx  level_63.tmx  level_64.tmx  level_65.tmx  level_73.tmx  level_74.tmx  monochrome_packed.png.pxo
src/: battle.c  battle.h  characters.h  doors.c  doors.h  font.c  font.h  inventory.c  inventory.h  keys.h  levers.c  levers.h  links.c  links.h  loop_main.c  loop_main.h  loop_retry.c  loop_retry.h  loop_title.c  loop_title.h  loop_victory.c  loop_victory.h  main.c  main_char.c  main_char.h  memory.c  memory.h  mobs.c  mobs.h  mos.asm  objects.c  objects.h  print.c  print.h  room.c  room.h  room_type.h  screen.c  screen.h  spawners.c  (+13 more)
src/agon/: font.c  input.c  tiles.c  vdp.c  vdp.h
src/clynx/: check_96k.c  check_96k.h  color_macros.asm  copy_macros.asm  font.c  font_code.asm  screen.asm  tiles.c
tools/: create_title_screen.py  data_path.py  export_tiled.py  level.py  make_font.py  tile_maker.py  tile_maker_test.py  tileset.py  utils.py  utils_test.py
tools/pyzx0/: compress.py  test_compress.py  test_optimize.py
